<resources>
    <string name="app_name">NewsReader</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_news">News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_navigation">Navigation</string>


    <!-- comments fragments resources-->
    <string name="comments_titleComms">Comments</string>
    <string name="leave_commentComms">Leave a comment</string>
    <string name="uploadCommentComms">add comment</string>
    <string name="comment_textComms">write comment</string>


//=======


    <!-- Login and register  strings -->
    <string name="sign_in_tag">sign in</string>
    <string name="sign_in_email_hint">email</string>
    <string name="sign_in_password_hint">password</string>
    <string name="sign_in_back_btn">back</string>
    <string name="sign_in_sign_in_btn">sign in</string>
    <string name="sign_in_register_btn">register</string>

    <string name="sign_up_tag">sign up</string>
    <string name="sign_up_email_hint">email</string>
    <string name="sign_up_pswd_hint">password</string>
    <string name="sign_up_rep_pswd_hint">repeat password</string>
    <string name="sign_up_nick_hint">nick</string>
    <string name="sign_up_register_btn">register</string>
    <string name="sign_up_login_btn">sign in</string>
//=======
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="subheading">Subheading</string>
    <string name="publishingDate">Published: </string>
    <string name="updateDate">Updated</string>
    <string name="opinion">Opinion</string>
    <string name="europe">Europe</string>
    <string name="poland">Poland</string>
    <string name="world">World</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="sports">Sport</string>
    <string name="technology">Technology</string>
    <string name="automobiles">Automobiles</string>
    <string name="sections">Sections</string>
    <string name="title_sections">Sections</string>
    <string name="comments">Comments</string>
    <string name="login">Login</string>
    //>>>>>>> master
//>>>>>>> master
</resources>