<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <menu
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/action_navigation"
            android:icon="@drawable/ic_action_navigation_menu"
            android:title="@string/menu_navigation" />
    </menu>
</androidx.constraintlayout.widget.ConstraintLayout>