<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaveCommentFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLeaveCommFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_commentComms"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textViewUserNickLeaveCommFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp" />

        <EditText
            android:id="@+id/editTextUserCommentLeaveCommFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/comment_textComms"
            android:inputType="textMultiLine"
            android:paddingHorizontal="15dp"/>

        <Button
            android:id="@+id/buttonLeaveCommentLeaveCommFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploadCommentComms" />
    </LinearLayout>
</FrameLayout>