<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="article"
            type="com.example.newsreader.ArticleData" />
        <variable
            name="clickListener"
            type="com.example.newsreader.ui.home.MainArticlesAdapter.MainArticlesListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()->clickListener.onClick(article)}">

        <ImageView
            android:id="@+id/bigger_news_item_image_view"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <TextView
            android:id="@+id/bigger_news_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_news_item_default_margin"
            android:layout_marginEnd="@dimen/standard_news_item_default_margin"
            android:layout_below="@id/bigger_news_item_image_view"
            android:theme="@style/article_title"
            android:text="@string/title" />

        <TextView
            android:id="@+id/bigger_news_item_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_news_item_default_margin"
            android:layout_marginEnd="@dimen/standard_news_item_default_margin"
            android:layout_below="@id/bigger_news_item_title"
            android:theme="@style/article_author"
            android:text="@string/author" />

        <TextView
            android:id="@+id/bigger_news_item_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_news_item_default_margin"
            android:layout_marginEnd="@dimen/standard_news_item_default_margin"
            android:layout_below="@id/bigger_news_item_author"
            android:theme="@style/bigger_news_item_subheading"
            android:text="@string/subheading" />
    </RelativeLayout>
</layout>