<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.newsreader.ui.home.HomeFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_sections"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_navigation_home_to_article"
            app:destination="@id/article">
            <argument
                android:name="article_id"
                app:argType="string"
                android:defaultValue="0" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.newsreader.ui.loginAndRegister.LoginFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_sections" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sections"
        android:name="com.example.newsreader.ui.sections.SectionsFragment"
        android:label="@string/title_sections"
        tools:layout="@layout/fragment_sections" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_sections_to_chosenSectionFragment"
            app:destination="@id/chosenSectionFragment" >
            <argument
                android:name="chosen_category"
                app:argType="string"
                android:defaultValue="0" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/article"
        android:name="com.example.newsreader.ui.article.ArticleFragment"
        android:label="article_fragment"
        tools:layout="@layout/article_fragment" >
        <argument
            android:name="article_id"
            app:argType="string"
            android:defaultValue="1" />
        <action
            android:id="@+id/action_article_to_commentsFragment"
            app:destination="@id/commentsFragment">
            <argument
                android:name="articleId"
                app:argType="string"
                android:defaultValue="0" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/chosenSectionFragment"
        android:name="com.example.newsreader.ui.chosenSection.ChosenSectionFragment"
        android:label="chosen_section_fragment"
        tools:layout="@layout/chosen_section_fragment">
        <argument
            android:name="chosen_category"
            app:argType="string"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_chosenSectionFragment_to_article"
            app:destination="@id/article">
            <argument
                android:name="article_id"
                app:argType="string"
                android:defaultValue="0" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/commentsFragment"
        android:name="com.example.komentarze.CommentsFragment"
        android:label="CommentsFragment" >
        <argument
            android:name="articleId"
            app:argType="string"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_commentsFragment_to_leaveCommentFragment"
            app:destination="@id/leaveCommentFragment" >
            <argument
                android:name="articleId"
                app:argType="string"
                android:defaultValue="0" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/leaveCommentFragment"
        android:name="com.example.komentarze.LeaveCommentFragment"
        android:label="LeaveCommentFragment" >
        <argument
            android:name="articleId"
            app:argType="string"
            android:defaultValue="1" />
    </fragment>
    <activity
        android:id="@+id/registerActivity"
        android:name="com.example.newsreader.ui.loginAndRegister.RegisterActivity"
        android:label="activity_register"
        tools:layout="@layout/activity_register" />
</navigation>